Add reference to protractor.

--- a/article/content/appendix.tex
+++ b/article/content/appendix.tex
@@ -3,7 +3,7 @@
 \section{Messungen Winkel}
 \label{sec:measurements-dezibot-angle}
 
-Um die in \autoref{tab:measurements-dezibot-angle} aufgelisteten Werte so genau wie möglich zu messen, wurde ein eigenes 3D\hyphen gedrucktes Modell~\cite{felttipDezibotAlignmentPointer2025} entworfen. Dies vereinfacht das Ablesen der Winkel und verstärkt die Präzision.
+Um die in \autoref{tab:measurements-dezibot-angle} aufgelisteten Werte so genau wie möglich zu messen, wurde ein eigenes 3D\hyphen gedrucktes Modell~\cite{felttipDezibotAlignmentPointer2025} entworfen. Dies vereinfacht das Ablesen der Winkel und verstärkt die Präzision. Weiterhin wurde ein Winkelmesser\footnote{\url{https://github.com/embedded-chess/misc/blob/main/src/protractor.pdf}} entworfen und gedruckt, auf die die Position des messendenden Dezibots sowie des Beacons inkl. Ausrichtung festgehalten ist. Durch das Fadenkreuz und den Pfeil des 3D-Modells können Messungenauigkeiten verringert werden.
 
 Die gemessenen Rohdaten (einzelne Sensorwerte sowie Winkel) können auf GitHub\footnote{\url{https://github.com/embedded-chess/misc/blob/main/src/angle_determination_adjustment/angle_measurements.csv}} eingesehen werden. Die Winkel sind in \autoref{tab:measurements-dezibot-angle} tabellarisch sowie in \autoref{fig:measurements-dezibot-angle} grafisch dargestellt. Außerdem sind die Differenzen $\Delta\alpha$ sind in \autoref{fig:ir-signal-diff} grafisch aufbereitet.
 
