--- a/article/header/packages.tex
+++ b/article/header/packages.tex
@@ -69,6 +69,5 @@
 
 \AddToHook{cmd/section/before}{\clearpage}
 
-\usepackage{footmisc}
-\renewcommand{\footnotelayout}{\hspace{0.5em}}
-\renewcommand{\hangfootparindent}{0.5em}
+\usepackage[hang]{footmisc}
+\setlength\footnotemargin{1.5em}
