--- a/article/content/structure.tex
+++ b/article/content/structure.tex
@@ -3,10 +3,32 @@
 \section{Projektstruktur}
 \label{sec:final-project-structure}
 
-Unser Beitrag in diesem Projekt besteht einerseits in der Änderung und Ergänzung der bereits vorhandenen \texttt{dezibot}-Library~\cite{dezibotteamDezibotDezibot2025}, sowie dem Hinzufügen unseres \texttt{EmbeddedChessPieces}-Packages. Letzteres befindet sich nach Vorgabe der Dozenten unter \texttt{example/EmbeddedChessPieces}.
+Unser Beitrag in diesem Projekt besteht einerseits in der Änderung und Ergänzung der bereits vorhandenen \texttt{dezibot}-Library~\cite{dezibotteamDezibotDezibot2025}, sowie dem Hinzufügen unseres \texttt{Embedded\-Chess\-Pieces}-Packages. Letzteres befindet sich nach Vorgabe der Dozenten unter \texttt{example/""Embedded\-Chess\-Pieces} (vgl. \autoref{fig:project-structure}).
 
-Die Business"=Logic ist im \texttt{src}-Verzeichnis des Projektes abgelegt. Darin sind die Strukturen und die Logik (siehe \autoref{sec:chess-logic}), welche dieses Projekt ermöglichen, abgelegt.
+\begin{figure}[h]
+\centering
+\begin{cminted}{text}
++-- src/              # dezibot/
+|   +-- colorSensor/
+|   +-- ...
+|   `-- multiColorLight/
+`-- example/EmbeddedChessPieces/
+    +-- src
+    |   +-- ECPChessLogic/
+    |   +-- ECPColorDetection/
+    |   +-- ECPMovement/
+    |   `-- ECPSignalDetection/
+    `-- examples/
+        +-- playground/
+        +-- showcase/
+        `-- tests/
+\end{cminted}
+\caption{Vereinfachte Projekt"=Struktur}
+\label{fig:project-structure}
+\end{figure}
+
+Die Business"=Logic ist im \texttt{src}-Verzeichnis des Projektes \texttt{example/""Embedded\-Chess\-Pieces} abgelegt. Darin sind die Strukturen und die Logik (siehe \autoref{sec:chess-logic}), welche dieses Projekt ermöglichen, abgelegt.
 
 Unter \texttt{examples} befinden sich verschiedene Arduino-Sketches, u.a. zum Testen einzelner Funktionen. Außerdem sind dort die zwei wichtigen Sketches, welche für die finale Vorführung (\texttt{showcase}\footnote{\url{https://github.com/nicosrm/24-emb-chess/tree/main/example/EmbeddedChessPieces/examples/showcase}}) notwendig sind, abgelegt. Dabei handelt es sich um einen Infrarot-Emitter, welcher in \autoref{sec:movement-ir} erläutert wird, sowie um einen Sketch, der auf dem Dezibot läuft, welcher schlussendlich die Schachfigur simuliert. Zum Ausprobieren wurde weiterhin ein \texttt{playground}"=Sketch\footnote{\url{https://github.com/nicosrm/24-emb-chess/blob/main/example/EmbeddedChessPieces/examples/playground/playground.ino}} als Schritt"=für"=Schritt"=Anleitung hinzugefügt, mit welchem verschiedene implementierte Funktionen ausprobiert werden können.
 
-Für die Einrichtung muss müssen alle notwendigen Third-Party-Packages manuell installiert werden, welche für das \texttt{dezibot}-Package notwendig sind. Diese sind in der README unseres Projektes aufgelistet. Die Einrichtung der Arduino-IDE ändert sich durch dieses Projekt nicht. Zusätzlich muss ein symbolischer Link vom Projekt-Repository sowie \texttt{example/EmbeddedChessPieces} in das Arduino-Library-Verzeichnis gelegt werden.
+Für die Einrichtung muss müssen alle notwendigen Third"=Party"=Packages installiert werden, welche für das \texttt{dezibot}"=Package notwendig sind. Zusätzlich muss ein symbolischer Link vom Projekt"=Repository sowie \texttt{example/""Embedded\-Chess\-Pieces} in das Arduino"=Library"=Verzeichnis gelegt werden. Weitere Informationen können aus der README\footnote{\url{https://github.com/nicosrm/24-emb-chess/blob/feature/37-final-example-and-readme/README.md\#installation}} entnommen werden.
