Add section colour sensor calibration.

--- a/article/content/chess_logic.tex
+++ b/article/content/chess_logic.tex
@@ -10,7 +10,7 @@ Wie bereits in \autoref{sec:final-project-structure} genannt, befindet sich die 
 \begin{itemize}
     \item \texttt{ECPChessLogic}: notwendige Schach"=Logik, wie Figuren, Felder und die Zug"=Validierung;
     \item \texttt{ECPMovement}: physikalische Bewegung des Dezibots auf dem Schachbrett (vgl. \autoref{sec:movement});
-    \item \texttt{ECPColorDetection}: Erkennung, ob Dezibot auf weißem oder schwarzem Feld steht (vgl. \autoref{sec:color-detection});
+    \item \texttt{ECPColorDetection}: Erkennung, ob Dezibot auf weißem oder schwarzem Feld steht (vgl. \autoref{sec:colour-detection});
     \item \texttt{ECPSignalDetection}: Bestimmung eines Beacon"=Signales, auf welchem die Rotation basiert (vgl. \autoref{sec:angle-determination}).
 \end{itemize}
 
