--- a/article/content/perspective.tex
+++ b/article/content/perspective.tex
@@ -4,3 +4,12 @@
 \label{sec:perspective}
 
 \lipsum[1]
+
+% kommunikation
+%   untereinander oder
+%   zentrale einheit
+% weiterhin verbesserung bewegung
+% spiel elemente
+%   turm-könig tausch
+%   bauer zu beliebig
+% feld verlassen wenn geschlagen
