Add section colour calibration infrared.

--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -429,9 +429,9 @@ Für die Verbesserung der Farberkennung war zunächst der Ansatz eine Kalibrieru
 
 Insgesamt wird an fünf Positionen auf dem Schachbrett werden für beide Farben jeweils die durchschnittliche Helligkeit anhand von drei Durchläufen gemessen. Der Schwellwert für eine Farbe wird für Weiß durch die niedrigste Messung und Schwarz die höchste sowie jeweils einem Offset berechnet.
 
-Durch die zwei Schwellwerte ergibt sich ein weiterer Zustand, \emph{unambiguous}, welcher bei der Bestimmung der aktuellen Feldfarbe auftreten kann. So wird das Problem angesprochen, dass sowohl weiße als auch schwarze Felder erst wahrgenommen werden, wenn der Dezibot weitestgehend auf dem Feld steht. Diese Addition führt dazu, dass die Funktion \texttt{ECP"-Color"-Detection::""is"-White"-Field} nicht mehr Wahrheitswerte ausgeben kann und wurde dementsprechend zu \texttt{ECP"-Color"-Detection::""get"-Field"-Color} umgeändert.
+Durch die zwei Schwellwerte ergibt sich ein weiterer Zustand, uneindeutig~(\emph{unambiguous}), welcher bei der Bestimmung der aktuellen Feldfarbe auftreten kann. So wird das Problem angesprochen, dass sowohl weiße als auch schwarze Felder erst wahrgenommen werden, wenn der Dezibot weitestgehend auf dem Feld steht. Diese Addition führt dazu, dass die Funktion \texttt{ECP"-Color"-Detection::""is"-White"-Field} nicht mehr Wahrheitswerte ausgeben kann und wurde dementsprechend zu \texttt{ECP"-Color"-Detection::""get"-Field"-Color} umgeändert.
 
-Die Bestimmung der gesuchten Feldfarbe benötigt eine weitere Funktion \texttt{ECP"-Color"-Detection::""get"-Likely"-Field"-Color} für den Fall, dass \emph{unambiguous} die aktuell bestimmte Farbe ist. Diese Funktion bestimmt an welchem Schwellwert die aktuelle Helligkeit näher ist.
+Die Bestimmung der gesuchten Feldfarbe benötigt eine weitere Funktion \texttt{ECP"-Color"-Detection::""get"-Likely"-Field"-Color} für den Fall, dass die aktuell bestimmte Farbe uneindeutig ist. Diese Funktion bestimmt an welchem Schwellwert die aktuelle Helligkeit näher ist.
 
 Das Problem, dass der Dezibot weiterhin wird eine Farbe bereits erkennt, auch wenn er sich nicht vollständig auf dem Feld befindet, wurde experimentell versucht durch das Hinzunehmen zwei weiterer Zustände anzusprechen. Dabei wurde neben der Helligkeit wenn der Dezibot auf dem Feld steht auch der hellste bzw. dunkelste Wert gemessen, wenn der Farbsensor in der Mitte des Feldes steht. Die Idee war es, dass zunächst der Schwellwert für diesen Status erreicht werden muss bevor die eigentliche Feldfarbe angenommen wird.
 
@@ -441,3 +441,15 @@ Auch das Licht zur Ausbesserung schlechter Lichtverhältnisse wurde in der Itera
 
 \subsubsection{Infrarot Farberkennung}
 \label{sec:colour-calibration-ir}
+
+Alternativ zu der Verwendung des Farbsensors wurde der Idee nachgegangen mithilfe von Infrarot die Farbe des Feldes zu bestimmen. Schwarze Felder absorbieren Infrarot Licht während weiße Felder es reflektieren. Anhand der IR-Sensoren des Dezibots kann dann überprüft werden wie viel des ausgesendeten Lichts reflektiert wird. Verwendet wird dafür die IR-LED, welche zentral auf der Unterseite platziert ist. Wegen deren Position kann nach den durchgeführten Experimenten das genaue Verhältnis von schwarzem und weißen Untergrund wahrgenommen werden und somit die Mitte des Feldes bestimmt werden.  
+
+Die Farberkennung verläuft vergleichbar zu der mittels Farbsensor. Zunächst wird für die Berechnung der Schwellwerte zu beginn kalibriert. Der Schwellwert berechnet sich mit einem Offset aus 20\% der Differenz. Vor der Messung wird die LED mit anschließender Verzögerung in der Funktion \texttt{ECP"-Signal"-Detection::""cumulate"-Infrared"-Values} angeschaltet; ohne die Verzögerung kann es sein, dass die LED noch nicht leuchtet. Für die Bestimmung  der Feldfarbe sind die einzelnen Infrarot Werte nicht relevant, weshalb diese addiert werden. Somit kann anhand der Summe in der Funktion \texttt{ECP"-Color"-Detection::""measure"-Infrared"-Field"-Color} die aktuelle Feldfarbe bestimmt werden. Anschließend wird die LED ebenfalls mit einer Verzögerung abgeschaltet, damit sichergestellt ist, dass die LED aus ist. Auch wird mit \texttt{ECP"-Color"-Detection::""calculate"-Likely"-Infrared"-Field"-Color} bestimmt welcher Schwellwert näher an der aktuellen Farbe ist. 
+
+Mit \texttt{ECP"-Color"-Detection::""set"-Color"-Detection"-Mode(bool useIR)} wird falls \texttt{useIR} wahr ist mittels der Flag \texttt{ECP"-Color"-Detection::""use"-Infrared"-Color"-Detection} anstelle den Farbsensors die Infrarot Farberkennung verwendet. Die Funktionen zum Erhalten der Feldfarbe verändert sich nach außen nicht, dementsprechend ändert sich die Verwendung in \texttt{ECP"-Movement} nicht.
+
+Beeinträchtigt wird die Farberkennung durch das Beacon welches ebenfalls Infrarot aussendet und dafür sorgt, dass schwarze Felder als uneindeutig oder sogar als weißes Feld wahrgenommen werden. Um dem entgegen zu wirken muss daher das Beacon während des Messens sein Infrarot Licht abschalten. Eine Möglichkeit dies zu erreichen, wäre die Nutzung einer drahtlose Verbindung. Da drahtlose Verbindung in diesem Projekt behandelt wird, wurde experimentell dem Ansatz nachgegangen, das der Beacon durch periodisches Messen nach anderen Infrarot Signale reagiert.
+
+Dabei wird der IR-Sensor vorne am Beacon verwendet um andere Signale zu messen. Wenn eine bestimmte Stärke erfasst wird, schaltet der Beacon sein Licht aus und sobald kein anderes Infrarot Signal wahrgenommen wird schaltet er es wieder an. Das An- und Ausschalten der LED ist nicht sofort möglich, weshalb auch hier Verzögerungen eingebaut wurden um sicherzustellen, dass die LED den gewollten Status angenommen hat. 
+
+Problematisch ist bei dem Ansatz, dass das Beacon sein eigenes Infrarot Licht wahrnimmt, trotz der Verdeckung durch das vordere Bein, wie es in \autoref{fig:dezibot-bottom} dargestellt ist. Dies führt dazu, dass der Beacon periodisch seine LED an- und wieder aus stellt. Dies beeinträchtigt die Funktionalität nur etwas. So kann es durch die Perioden dazu führen, dass die Rotation länger dauert, da der Dezibot ggf. warten muss bis er wieder ein Infrarot Signal wahrnimmt. Der Ansatz funktioniert demnach trotzdem, wenn ausreichend lange vor einer Infrarot Farbmessung verzögert wird. So hat das Beacon Zeit in einer Phase in der sein eigenes Licht aus ist das Infrarot Licht vom Dezibot wahrzunehmen. Dies Funktioniert aber nicht immer, da aus den Experimenten hervorging, dass bei einer Distanz in der das Beacon das Licht der Farbmessung nicht wahrnimmt die Messung aber beeinträchtigt werden kann. Dieser experimentelle Ansatz für das Beacon wurde in dem Programm \texttt{ir\_emitter\_ir\_color\_detection.ino} festgehalten.
