Add draft for section conclusion.

--- a/article/content/conclusion.tex
+++ b/article/content/conclusion.tex
@@ -3,4 +3,8 @@
 \section{Fazit}
 \label{sec:conclusion}
 
-\lipsum[1]
+% Grundlage, Iterationen, Ansätze
+Mit dieser Arbeit haben wird die Grundlage für das Projekt Embedded Chess Pieces erarbeitet. Über das Semester hinweg wurde die Struktur erarbeitet, die Logik implementiert und über mehrere Iterationen an der Bewegung des Dezibots auf dem Schachbrett gearbeitet. Besonders die Bewegung wurde nach dem grundlegenden Ansatz in der ersten Iteration stetig verbessert und Ansätze für weitere Verbesserungen und Erweiterungen in dieser Arbeit erarbeitet.
+
+% Tests, PR, Pairprogramming, Style
+Bei der Implementierung wurde stets auf eine hohe Qualität und Dokumentation geachtet und Beispiele zum Testen der Logik erstellt. Neben viel Pair"=Programming wurden neue Funktionalitäten stets in einer Pull"=Request betrachtet und ausgebessert. 
