--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -133,8 +133,8 @@ Bei einer Rotation wird zunächst mit der in \autoref{sec:move-straight-turn} er
 +----------------+
 |Faulty rotation |
 |Please correct  |
-|my position in  |
-|10 seconds to   |
+|my position     |
+|within 10s to   |
 |                |
 |> A1 NORTH      |
 |                |
@@ -420,36 +420,74 @@ Ferner wurden die bestimmten Winkel vom Dezibot als Feature und die tatsächlich
 \subsection{Iteration 5: Kalibrierung der Farben}
 \label{sec:colour-calibration}
 
-Das erkennen von Feldern anhand der Farbe ist verzahnt mit der Bewegung: eine Bewegung benötigt die Farberkennung, um ausgeführt zu werden wie bspw. das Vorwärtsbewegen um ein Feld. Die Farberkennung kann aber auch nur so weit die Bewegung unterstützten, wie diese ordentlich funktioniert. So ist es in diesem Fall nicht vorteilshaft eine Farberkennung zu haben, welche dem Dezibot genau dann die Rückmeldung gibt, dass die Mitte des nächsten Feldes erreicht ist, da eine leichte Abweichung dafür sorgt, dass der Dezibot über das Feld hinauszieht, obwohl er angemessen, aber nicht genau mittig, auf dem Feld stand. Dementsprechend ist wichtig für die Farberkennung eine Balance zu finden, welche die Bewegung bestmöglich unterstützt, aber die Bewegung nicht beeinträchtigt.
+Das Erkennen von Feldern anhand der Farbe ist eng mit der Bewegung verknüpft: Eine Bewegung, wie bspw. die Vorwärtsbewegung um ein Feld, benötigt diese, um ausgeführt zu werden. Allerdings kann die Farberkennung eine Bewegung nur in dem Maße unterstützen, wie letztere selbst zuverlässig funktioniert.
+
+Vorstellbar wäre eine Farberkennung, welche die Mitte eines Feldes exakt erkennt. Somit würde ein Dezibot nur halten, wenn er diese auch erreicht hat. Da die Bewegung jedoch nicht exakt ist, können bereits kleine Abweichung dazu führen, dass ein Dezibot über ein Feld hinausläuft, da er für sich betrachtet nicht exakt in der Mitte steht. Dementsprechend ist es wichtig, für die Farberkennung eine Balance zu finden, welche die Bewegung bestmöglich unterstützt, diese jedoch nicht beeinträchtigt.
+
 
 \subsubsection{Farbsensor}
 \label{sec:colour-calibration-colour-sensor}
 
-Für die Verbesserung der Farberkennung war zunächst der Ansatz eine Kalibrierung der Farben durchzuführen, um die aktuellen Lichtverhältnisse einzubeziehen. Der Dezibot wird dafür am Start auf ein weißes und ein schwarzes Feld gesetzt werden und anhand der gemessenen Werte der Schwellwert angepasst. Die Kalibrierung wird mit der Funktion \texttt{ECP"-Color"-Detection::""calibrate"-Field"-Color} umgesetzt. In dieser wird mit \texttt{ECP"-Color"-Detection::""calibrate"-Color} jeweils die Aufforderung auf das Display gedruckt und die Helligkeit gemessen.
+Für die Verbesserung der Farberkennung war zunächst der Ansatz, eine Kalibrierung der Farben durchzuführen, um die aktuellen Lichtverhältnisse einzubeziehen. Der Dezibot wird dafür zu Beginn auf ein weißes und ein schwarzes Feld gesetzt, um den Schwellwert anhand der gemessenen Werte anzupassen. Die Kalibrierung wird mit der Funktion \texttt{ECP\-Color\-Detection::""calibrate\-Field\-Color} umgesetzt. In dieser wird jeweils eine Aufforderung auf das Display gedruckt (vgl.~\autoref{fig:colour-calibration-display-print}).
 
-Insgesamt wird an fünf Positionen auf dem Schachbrett werden für beide Farben jeweils die durchschnittliche Helligkeit anhand von drei Durchläufen gemessen. Der Schwellwert für eine Farbe wird für Weiß durch die niedrigste Messung und Schwarz die höchste sowie jeweils einem Offset berechnet.
+\begin{figure}[h]
+\centering
+\begin{cminted}{text}
++----------------+    +----------------+
+|Calibrate white |    |Calibrate black |
+|Please place on |    |Please place on |
+|white field     |    |black field     |
+|within 2s       |    |within 2s       |
+|                |    |                |
+|                |    |                |
+|                |    |                |
+|                |    |                |
++----------------+    +----------------+
+\end{cminted}
+\caption{Beispiel-Ausgabe für Kalibrierung der Farben.}
+\label{fig:colour-calibration-display-print}
+\end{figure}
 
-Durch die zwei Schwellwerte ergibt sich ein weiterer Zustand, uneindeutig~(\emph{unambiguous}), welcher bei der Bestimmung der aktuellen Feldfarbe auftreten kann. So wird das Problem angesprochen, dass sowohl weiße als auch schwarze Felder erst wahrgenommen werden, wenn der Dezibot weitestgehend auf dem Feld steht. Diese Addition führt dazu, dass die Funktion \texttt{ECP"-Color"-Detection::""is"-White"-Field} nicht mehr Wahrheitswerte ausgeben kann und wurde dementsprechend zu \texttt{ECP"-Color"-Detection::""get"-Field"-Color} umgeändert.
+Insgesamt werden an je fünf Positionen auf dem Schachbrett für beide Farben die durchschnittlichen Helligkeitswerte aus jeweils drei Messungen ermittelt. Der Schwellwert für die Farbe weiß wird anhand der niedrigsten Messung und für schwarz anhand der höchsten Messung sowie einem entsprechenden Offset berechnet.
 
-Die Bestimmung der gesuchten Feldfarbe benötigt eine weitere Funktion \texttt{ECP"-Color"-Detection::""get"-Likely"-Field"-Color} für den Fall, dass die aktuell bestimmte Farbe uneindeutig ist. Diese Funktion bestimmt an welchem Schwellwert die aktuelle Helligkeit näher ist.
+% TODO: Formel oder Code hinzufügen für bessere Verständlichkeit
 
-Das Problem, dass der Dezibot weiterhin wird eine Farbe bereits erkennt, auch wenn er sich nicht vollständig auf dem Feld befindet, wurde experimentell versucht durch das Hinzunehmen zwei weiterer Zustände anzusprechen. Dabei wurde neben der Helligkeit wenn der Dezibot auf dem Feld steht auch der hellste bzw. dunkelste Wert gemessen, wenn der Farbsensor in der Mitte des Feldes steht. Die Idee war es, dass zunächst der Schwellwert für diesen Status erreicht werden muss bevor die eigentliche Feldfarbe angenommen wird.
+Durch die zwei Schwellwerte ergibt sich ein weiterer Zustand, uneindeutig~(\emph{ambiguous}), welcher bei der Bestimmung der aktuellen Feldfarbe auftreten kann. So wird das Problem angesprochen, dass sowohl weiße als auch schwarze Felder erst wahrgenommen werden, wenn der Dezibot weitestgehend auf jenem Feld steht. Durch den neuen Zustand kann die Funktion \texttt{ECP"-Color"-Detection::""is"-White"-Field} nicht mehr nur einen Wahrheitswert zurückgeben und wurde daher durch \texttt{ECP"-Color"-Detection::""get"-Field"-Color} ersetzt.
 
-Dafür wurde \texttt{Field"-Color} um \texttt{UNAMBIGUOUS\_BLACK\_TO\_WHITE}~(UBW) und \texttt{UNAMBIGUOUS\_WHITE\_TO\_BLACK}~(UWB) erweitert. Durch diese Zustände ist auch für die Vorwärtsbewegen eine Plausibilitätsprüfung umsetzbar: wenn nach erreichen der Übergangszustände UBW und UWB ein anderer Zustand als \texttt{WHITE\_FIELD} oder \texttt{BLACK\_FIELD} erreicht wird, ist der Dezibot wahrscheinlich von dem Feld wieder abgekommen. Der Unterschied zwischen der Mitte eines Feldes und einem Punkt werter außen ist aber meistens zu gering und daher ist der Ansatz nicht leistungsfähig. Eine Plausibilitätsprüfung wird für die Vorwärtsbewegung um ein Feld dennoch durchgeführt. Bei dieser wird die Anzahl der Bewegungen beschränkt. Wenn also innerhalb von zehn Versuchen nicht die gesuchte Feldfarbe erreicht wird, ist der Dezibot wahrscheinlich über das Feld hinaus und nicht gerade gelaufen.
+Zu Beginn einer Vorwärtsbewegung wird bestimmt, auf welcher Feldfarbe sich der Dezibot befindet. Da \texttt{get\-Field\-Color} jedoch auch \texttt{AMBIGUOUS} zurückgeben kann, muss eine weiter Funktion implementiert werden, welche die wahrscheinlichste Farbe zurückgibt. Dies wird durch \texttt{ECP\-Color\-Detection::""get\-Likely\-Field\-Color} umgesetzt, welche die Farbe zurückgibt, für die die gemessene Helligkeit näher am entsprechenden Schwellwert liegt.
 
-Auch das Licht zur Ausbesserung schlechter Lichtverhältnisse wurde in der Iteration angepasst. Da dieses nur für die Messungen relevant ist wird die Verwendung über die Flag \texttt{ECP"-Color"-Detection::""turn"-On"-Color"-Correction"-Light} geregelt. Wenn diese Flag auf \texttt{true} gesetzt ist, wird vor der Bestimmung der Helligkeit die LED mit einer Verzögerung für eine ordentliche Messung angemacht und anschließend wieder ausgestellt. Auf diese Weise ist erkenntlich wann die Farbe gemessen wird und spart Energie. Ebenso besteht keine Notwendigkeit außerhalb der \texttt{ECP"-Color"-Detection}"=Klasse mit dem Licht zu interagieren.
+Das Problem, dass der Dezibot eine Farbe erkennt, obwohl er sich nicht vollständig auf dem Feld befindet, wurde experimentell durch die Einführung von zwei zusätzlichen Zuständen behandelt. Dabei wurde neben der Helligkeit, wenn der Dezibot auf dem Feld steht, auch der hellste bzw. dunkelste Wert gemessen, während der Farbsensor in der Mitte des Feldes positioniert ist. Die Idee war, dass zunächst der Schwellwert für diesen Zustand erreicht werden muss, bevor die tatsächliche Feldfarbe angenommen wird.
 
-\subsubsection{Infrarot Farberkennung}
+Dafür wurde \texttt{Field\-Color} um \texttt{AMBIGUOUS\_BLACK\_TO\_WHITE}~(ABW) sowie \texttt{AMBIGUOUS\_WHITE\_TO\_BLACK}~(AWB) erweitert. Durch diese Zustände ist auch für die Vorwärtsbewegung eine Plausibilitätsprüfung umsetzbar. Wenn nach Erreichen der Übergangszustände ABW und AWB ein anderer Zustand als \texttt{WHITE\_FIELD} oder \texttt{BLACK\_FIELD} erreicht wird, ist der Dezibot wahrscheinlich wieder vom Feld heruntergelaufen. Der Unterschied zwischen der Mitte eines Feldes und einem Punkt weiter außen ist jedoch meistens zu gering, weshalb der Ansatz nicht leistungsfähig ist. 
+
+Dennoch wurde eine Plausibilitätsprüfung für Vorwärtsbewegungen um je ein Feld eingeführt, welche die Anzahl der Bewegungen beschränkt. Wenn also innerhalb von zehn Versuchen die gesuchte Feldfarbe nicht erreicht wurde, ist der Dezibot wahrscheinlich über das Feld hinaus und nicht gerade gelaufen.
+
+Auch das Licht zur Ausbesserung schlechter Lichtverhältnisse wurde in dieser Iteration angepasst. Da dieses nur für die Messungen relevant ist, wird die Verwendung über die Flag \texttt{ECP\-Color"-Detection::""turn\-On\-Color\-Correction\-Light} geregelt. Wenn diese Flag auf \texttt{true} gesetzt ist, wird die LED vor der Helligkeitsmessung mit einer Verzögerung eingeschaltet, um eine präzise Messung zu gewährleisten, und anschließend wieder ausgeschaltet. Auf diese Weise ist erkenntlich, wann die Farbe gemessen wird, und spart somit Energie. Ebenso besteht keine Notwendigkeit außerhalb der \texttt{ECP"-Color"-Detection}"=Klasse mit dem Licht zu interagieren.
+
+
+\subsubsection{Infrarot"=Farberkennung}
 \label{sec:colour-calibration-ir}
 
-Alternativ zu der Verwendung des Farbsensors wurde der Idee nachgegangen mithilfe von Infrarot die Farbe des Feldes zu bestimmen. Schwarze Felder absorbieren Infrarot Licht während weiße Felder es reflektieren. Anhand der IR-Sensoren des Dezibots kann dann überprüft werden wie viel des ausgesendeten Lichts reflektiert wird. Verwendet wird dafür die IR-LED, welche zentral auf der Unterseite platziert ist. Wegen deren Position kann nach den durchgeführten Experimenten das genaue Verhältnis von schwarzem und weißen Untergrund wahrgenommen werden und somit die Mitte des Feldes bestimmt werden.  
+Alternativ zur Verwendung des Farbsensors wurde der Idee nachgegangen, die Farbe eines Feldes mithilfe von Infrarot zu bestimmen. Schwarze Felder absorbieren Infrarot"=Licht, während weiße Felder es reflektieren. Anhand der Infrarot"=Sensoren kann überprüft werden, wie viel des ausgesendeten Lichts reflektiert wird. Dafür wird die Infrarot"=LED, welche zentral auf der Unterseite platziert ist, verwendet. Aufgrund der Position dieser kann nach den durchgeführten Experimenten das Verhältnis von schwarzem zu weißem Untergrund bestimmt und somit die Mitte eines Feldes bestimmt werden.
 
-Die Farberkennung verläuft vergleichbar zu der mittels Farbsensor. Zunächst wird für die Berechnung der Schwellwerte zu beginn kalibriert. Der Schwellwert berechnet sich mit einem Offset aus 20\% der Differenz. Vor der Messung wird die LED mit anschließender Verzögerung in der Funktion \texttt{ECP"-Signal"-Detection::""cumulate"-Infrared"-Values} angeschaltet; ohne die Verzögerung kann es sein, dass die LED noch nicht leuchtet. Für die Bestimmung  der Feldfarbe sind die einzelnen Infrarot Werte nicht relevant, weshalb diese addiert werden. Somit kann anhand der Summe in der Funktion \texttt{ECP"-Color"-Detection::""measure"-Infrared"-Field"-Color} die aktuelle Feldfarbe bestimmt werden. Anschließend wird die LED ebenfalls mit einer Verzögerung abgeschaltet, damit sichergestellt ist, dass die LED aus ist. Auch wird mit \texttt{ECP"-Color"-Detection::""calculate"-Likely"-Infrared"-Field"-Color} bestimmt welcher Schwellwert näher an der aktuellen Farbe ist. 
+Die Farberkennung verläuft ähnlich zum Ansatz mittels Farbsensor (vgl.~\autoref{sec:colour-calibration-colour-sensor}). Zunächst wird für die Berechnung der Schwellwerte eine Kalibrierung durchgeführt.
+% TODO: unklar, Formel angeben
+Die Schwellwerte berechnen sich mit einem Offset aus 20\% der Differenz.
+Vor der Messung wird die LED mit anschließender Verzögerung in der Funktion \texttt{ECP\-Signal\-Detection::""cumulate\-Infrared\-Values} angeschaltet. Ohne die Verzögerung kann es passieren, dass die LED noch nicht leuchtet. Für die Bestimmung  der Feldfarbe sind die einzelnen Infrarot"=Werte nicht relevant, weshalb diese addiert werden. Somit kann die aktuelle Feldfarbe anhand der Summe in der Funktion \texttt{ECP\-Color\-Detection::""measure\-Infrared\-Field\-Color} bestimmt werden. Anschließend wird die LED (ebenfalls mit einer Verzögerung) abgeschaltet, damit sichergestellt ist, dass die LED tatsächlich aus ist. Auch wird mit \texttt{ECP\-Color\-Detection::""calculate\-Likely\-Infrared\-Field\-Color} bestimmt, welcher Schwellwert näher an der aktuellen Farbe liegt. 
 
-Mit \texttt{ECP"-Color"-Detection::""set"-Color"-Detection"-Mode(bool useIR)} wird falls \texttt{useIR} wahr ist mittels der Flag \texttt{ECP"-Color"-Detection::""use"-Infrared"-Color"-Detection} anstelle den Farbsensors die Infrarot Farberkennung verwendet. Die Funktionen zum Erhalten der Feldfarbe verändert sich nach außen nicht, dementsprechend ändert sich die Verwendung in \texttt{ECP"-Movement} nicht.
+% TODO: kurze Formeln angeben
+% TODO: erwähnen, warum Verzögerung notwendig ist, d.h. Fehler in der Dezibot-Library
 
-Beeinträchtigt wird die Farberkennung durch das Beacon welches ebenfalls Infrarot aussendet und dafür sorgt, dass schwarze Felder als uneindeutig oder sogar als weißes Feld wahrgenommen werden. Um dem entgegen zu wirken muss daher das Beacon während des Messens sein Infrarot Licht abschalten. Eine Möglichkeit dies zu erreichen, wäre die Nutzung einer drahtlose Verbindung. Da drahtlose Verbindung in diesem Projekt behandelt wird, wurde experimentell dem Ansatz nachgegangen, das der Beacon durch periodisches Messen nach anderen Infrarot Signale reagiert.
+Zur Klasse \texttt{ECP\-Color\-Detection} wurde im Rahmen dieser Iteration die Flag \texttt{use"-Infrared"-Color"-Detection} hinzugefügt, welche bestimmt, ob der Ansatz mittels Infrarot (\texttt{true}) oder RGB (\texttt{false}) zur Erkennung der Feldfarbe verwendet werden soll. Dies kann mittels \texttt{ECP\-Color\-Detection::""set\-Use\-Infrared\-Color\-Detection} verändert werden. Die Funktionen zur Bestimmung der Feldfarbe verändern sich nach außen nicht, wodurch sich die Verwendung in \texttt{ECP\-Movement} ebenfalls nicht verändert.
 
-Dabei wird der IR-Sensor vorne am Beacon verwendet um andere Signale zu messen. Wenn eine bestimmte Stärke erfasst wird, schaltet der Beacon sein Licht aus und sobald kein anderes Infrarot Signal wahrgenommen wird schaltet er es wieder an. Das An- und Ausschalten der LED ist nicht sofort möglich, weshalb auch hier Verzögerungen eingebaut wurden um sicherzustellen, dass die LED den gewollten Status angenommen hat. 
+Beeinträchtigt wird die Farberkennung durch das Beacon, welches ebenfalls Infrarot aussendet und dafür sorgt, dass schwarze Felder als uneindeutig oder sogar als weißes Feld wahrgenommen werden. Um dem entgegen zu wirken, muss das Infrarot"=Licht des Beacons daher während des Messens abgeschaltet werden. Dies könnte bspw. über eine drahtlose Verbindung kommuniziert werden. Da drahtlose Verbindungen jedoch von diesem Projekt ausgeschlossen sind, wurde experimentell dem Ansatz nachgegangen, den Beacon durch periodisches Messen auf andere Infrarot"=Signale reagieren zu lassen.
 
-Problematisch ist bei dem Ansatz, dass das Beacon sein eigenes Infrarot Licht wahrnimmt, trotz der Verdeckung durch das vordere Bein, wie es in \autoref{fig:dezibot-bottom} dargestellt ist. Dies führt dazu, dass der Beacon periodisch seine LED an- und wieder aus stellt. Dies beeinträchtigt die Funktionalität nur etwas. So kann es durch die Perioden dazu führen, dass die Rotation länger dauert, da der Dezibot ggf. warten muss bis er wieder ein Infrarot Signal wahrnimmt. Der Ansatz funktioniert demnach trotzdem, wenn ausreichend lange vor einer Infrarot Farbmessung verzögert wird. So hat das Beacon Zeit in einer Phase in der sein eigenes Licht aus ist das Infrarot Licht vom Dezibot wahrzunehmen. Dies Funktioniert aber nicht immer, da aus den Experimenten hervorging, dass bei einer Distanz in der das Beacon das Licht der Farbmessung nicht wahrnimmt die Messung aber beeinträchtigt werden kann. Dieser experimentelle Ansatz für das Beacon wurde in dem Programm \texttt{ir\_emitter\_ir\_color\_detection.ino} festgehalten.
+Dabei wird der nördliche Infrarot"=Sensor des Beacons verwendet, um andere Signale zu messen. Wenn eine bestimmte Stärke erfasst wird, schaltet der Beacon sein Licht aus; sobald kein anderes Infrarot"=Signal wahrgenommen wird, schaltet er es wieder an. Das An- und Ausschalten der LED ist nicht sofort möglich, weshalb auch hier Verzögerungen eingebaut werden mussten, um sicherzustellen, dass die LED den gewollten Status annimmt.
+
+Bei diesem Ansatz ist problematisch, dass das Beacon sein eigenes Infrarot"=Signal wahrnimmt, trotz der Verdeckung durch das vordere Bein, wie es in \autoref{fig:dezibot-bottom} dargestellt ist. Dies führt dazu, dass der Beacon periodisch seine LED an- und wieder ausstellt.
+Dies beeinträchtigt die Funktionalität nur etwas. % TODO: "nur etwas"
+So kann es durch die Perioden dazu führen, dass die Rotation länger dauert, da der Dezibot ggf. warten muss, bis er wieder ein Infrarot"=Signal wahrnimmt. Der Ansatz funktioniert demnach trotzdem, wenn ausreichend lange vor einer Infrarot"=Farbmessung verzögert wird. So hat das Beacon Zeit in einer Phase, in der sein eigenes Licht aus ist, das Infrarot"=Licht vom Dezibot wahrzunehmen. Dies funktioniert jedoch nicht immer, da aus den Experimenten hervorgeht, dass bei einer Distanz, in der das Beacon das Licht für die Farbmessung nicht erfasst, die Messung beeinträchtigt werden kann. Dieser experimentelle Ansatz für das Beacon wurde im Programm \texttt{ir\_emitter\_ir\_color\_detection.ino} sowie in einem Video\footnote{\url{https://github.com/embedded-chess/doc/raw/refs/heads/main/assets/videos/beacon_turns_off_when_dezibot_measures_ir.mp4}} festgehalten.
+
+% TODO: ggf. Video erläutern
+
+% TODO: neuer Ansatz: Nutzerausgabe
